# tribles-rust

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  INVENTORY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.html  build.rs  commit-selectors.html  contributing.html  getting-started.html  incremental-queries.html  index.html  introduction.html  pile-format.html  print.html  query-language.html  repository-workflows.html  rustfmt.toml  schemas.html  searchindex.js  toc.html  toc.js
.github/workflows/: book.yml  mdbook.yml  preflight.yml
benches/: benchmark.rs  json_import.rs  patch.rs  query.rs
book/: README.md  book.toml
book/src/: SUMMARY.md  architecture.md  atreides-join.md  commit-selectors.md  contributing.md  descriptive_types.md  documentation-improvements.md  formal-verification.md  garbage-collection.md  getting-started.md  glossary.md  importing-data-formats.md  incremental-queries.md  introduction.md  pile-blob-metadata.md  pile-format.md  pile-metadata-proposal.md  portability-and-formats.md  query-engine.md  query-language.md  repository-workflows.md  schemas.md  type-algebra.md
deep-dive/: identifiers.html  index.html  philosophy.html  trible-structure.html
docs/: pile.md  repository.md
examples/: custom_schema.rs  doc_comment_test.rs  insert.rs  path.rs  pattern_changes.rs  query.rs  query_attr_many.rs  query_column_many.rs  query_many.rs  query_single.rs  query_transient_many.rs  repo.rs  workspace.rs
kani/: value_harness.rs
notebooks/: experiments.py
proofs/: commit_harness.rs  id_harness.rs  mod.rs  patch_harness.rs  query_harness.rs  query_macro_harness.rs  repo_ancestors_harness.rs  slow_harness.rs  util.rs  value_harness.rs  variableset_harness.rs
scripts/: build_book.sh  devtest.sh  preflight.sh  verify.sh
src/: FUCID.rs  UFOID.rs  attribute.rs  bitset.rs  blob.rs  blobcache.rs  blobschemas.rs  blobset.rs  blobstore.rs  bytetable.rs  bytetablealt.rs  column.rs  commit.rs  debug.rs  examples.rs  field.rs  fucid.rs  handle.rs  hashtribleset.rs  id.rs  id.rs.orig  lib.rs  meta.rs  metadata.rs  namespace.rs  pact.rs  part.rs  patch.rs  patchblobset.rs  pile.rs  prelude.rs  query.rs  remote.rs  repo.rs  schemas.rs  shortstring.rs  test.rs  tests.rs  transient.rs  trible.rs  (+8 more)
src/attribute/: attrconstraint.rs  attributeconstraint.rs
src/blob/: blobset.rs  memoryblobstore.rs  pile.rs  schemas.rs
src/blobschemas/: longstring.rs  packed.rs  simplearchive.rs  succinctarchive.rs  zc.rs  zcstring.rs
src/column/: columnconstraint.rs
src/id/: fucid.rs  genid.rs  rngid.rs  ufoid.rs
src/meta/: commit.rs
src/namespace/: triblepattern.rs
src/pact/: branch.rs  bytecursor.rs  empty.rs  entry.rs  leaf.rs  macros.rs  paddingcursor.rs  path.rs  setops.rs
src/patch/: branch.rs  bytecursor.rs  bytetable.rs  entry.rs  leaf.rs  paddingcursor.rs  setops.rs
src/prelude/: blobschemas.rs  valueschemas.rs
src/query/: constantconstraint.rs  hashmapconstraint.rs  hashsetconstraint.rs  hashtriblesetconstraint.rs  ignore.rs  intersectionconstraint.rs  mask.rs  patchconstraint.rs  regularpathconstraint.rs  unionconstraint.rs  variableset.rs
src/remote/: blobrepo.rs  blobstore.rs  commit.rs  head.rs  object_store.rs  objectrepo.rs  objectstore.rs  repo.rs
src/repo/: branch.rs  commit.rs  hybridstore.rs  memoryrepo.rs  objectstore.rs  pile.rs  repo.rs
src/schemas/: ed25519.rs  f256.rs  fr256.rs  genid.rs  handle.rs  hash.rs  iu256.rs  shortstring.rs  time.rs  zc.rs  zcstring.rs
src/test/: hashtribleset.rs
src/transient/: transientconstraint.rs
src/trible/: tribleset.rs
src/triblearchive/: simplearchive.rs  succinctarchive.rs  triblearchiveconstraint.rs  triblesetarchiveconstraint.rs  universe.rs
src/tribledb/: imtribledb.rs  imtribledb2.rs  imtribledb3.rs  imtribledb4.rs  imtribledb5.rs  query.rs
src/tribleindexset/: tribleindexsetconstraint.rs
src/tribleset/: hashtribleset.rs  pacttribleset.rs  patchtribleset.rs  patternconstraint.rs  tribleconstraint.rs  triblesetarchive.rs  triblesetconstraint.rs
src/types/: ed25519.rs  f256.rs  fucid.rs  handle.rs  hash.rs  iu256.rs  longstring.rs  semantic.rs  shortstring.rs  smallstring.rs  string.rs  syntactic.rs  time.rs  zc.rs  zcstring.rs
src/value/: schemas.rs
src/valueschemas/: ed25519.rs  f256.rs  fr256.rs  genid.rs  handle.rs  hash.rs  iu256.rs  shortstring.rs  time.rs
tests/: blob_gc.rs  branch.rs  branch_mut.rs  branch_store.rs  objectstore_meta_forget.rs  objectstore_repo.rs  patch_get.rs  patch_ordered_iterator.rs  patch_value_eq.rs  pattern_changes.rs  pattern_hygiene.rs  pattern_local_vars.rs  pile_empty_blob.rs  pile_iter_validation.rs  pile_metadata.rs  pile_refresh_truncate.rs  pile_restore_clears_inflight.rs  pile_sim.rs  pile_too_large.rs  push_merge.rs  regular_path_constraint.rs  repository.rs  succinctarchive_constraint.rs  succinctarchive_distinct.rs  succinctarchive_empty.rs  ufoid.rs  workspace.rs
tribles-macros/: Cargo.toml
triblespace-core/: Cargo.toml  build.rs
triblespace-core-macros/: Cargo.toml
triblespace-core-macros/src/: attributes.rs  lib.rs
triblespace-core/src/: attribute.rs  blob.rs  examples.rs  id.rs  lib.rs  metadata.rs  patch.rs  prelude.rs  query.rs  repo.rs  trible.rs  value.rs
triblespace-core/src/blob/: schemas.rs
triblespace-core/src/blob/schemas/: longstring.rs  simplearchive.rs  succinctarchive.rs
triblespace-core/src/id/: fucid.rs  rngid.rs  ufoid.rs
triblespace-core/src/import/: json.rs  mod.rs
triblespace-core/src/patch/: leaf.rs
triblespace-core/src/prelude/: blobschemas.rs  valueschemas.rs
triblespace-core/src/query/: constantconstraint.rs  ignore.rs
triblespace-core/src/repo/: branch.rs  commit.rs  objectstore.rs  pile.rs
triblespace-core/src/trible/: tribleset.rs
triblespace-core/src/value/: schemas.rs
triblespace-core/src/value/schemas/: boolean.rs  ed25519.rs  f256.rs  genid.rs  hash.rs  iu256.rs  linelocation.rs  r256.rs  range.rs  shortstring.rs  time.rs
triblespace-macros/: Cargo.toml
triblespace-macros-common/: Cargo.toml
triblespace-macros/src/: lib.rs
(+49 files in other folders)
