[package]
name = "triblespace"
version = "0.5.2"
authors = ["Jan Bramkamp <crest@rlwinm.de>", "⚫️ <jp@bultmann.eu>", "Vanja Sophie Cangalovic <vanja@bultmann.eu>"]
edition = "2021"
rust-version = "1.89"
description = "The tribles knowledge base implementation for rust."
homepage = "https://tribles.space"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "triblespace-core",
    "triblespace-core-macros",
    "triblespace-macros",
]
resolver = "2"

[dependencies]
triblespace-core = { path = "triblespace-core" }
triblespace-macros = { path = "triblespace-macros" }

[dev-dependencies]
criterion = "0.6.0"
fake = "4.3.0"
im = "15.1.0"
rayon = "1.7"
tempfile = "3.15.0"
trybuild = "1.0.99"
proptest = "1.6.0"
rand = "0.8"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
anybytes = { git = "https://github.com/triblespace/anybytes", features = ["bytes", "zerocopy"] }
url = "2.5.0"

[features]
default = ["triblespace-core/proptest"]
proptest = ["triblespace-core/proptest"]
kani = ["triblespace-core/kani"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "patch"
harness = false

[[bench]]
name = "json_import"
harness = false

[profile.bench]
debug = true
opt-level = 3

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[package.metadata.kani.flags]
default-unwind = "1"
