[package]
name = "triblespace"
version = "0.6.0"
authors = ["Jan Bramkamp <crest@rlwinm.de>", "⚫️ <jp@bultmann.eu>", "Vanja Sophie Cangalovic <vanja@bultmann.eu>"]
edition = "2021"
description = "The Triblespace: A lightweight knowledge base for rust."
homepage = "https://trible.space"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "triblespace-core",
    "triblespace-core-macros",
    "triblespace-macros",
    "triblespace-macros-common",
]
resolver = "2"

[dependencies]
triblespace-core = {version = "0.6.0", path = "./triblespace-core"}
triblespace-macros = {version = "0.6.0", path = "./triblespace-macros"}

[dev-dependencies]
criterion = "0.6.0"
fake = "4.3.0"
im = "15.1.0"
rayon = "1.7"
tempfile = "3.15.0"
trybuild = "1.0.99"
proptest = "1.6.0"
rand = "0.8"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
anybytes = { version = "0.20.0", features = ["bytes", "zerocopy"] }
url = "2.5.0"
serde_json = "1.0"
f256 = "0.7.0"
blake3 = "1.5"

[features]
default = ["triblespace-core/proptest"]
proptest = ["triblespace-core/proptest"]
kani = ["triblespace-core/kani"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "patch"
harness = false

[[bench]]
name = "json_import"
harness = false

[profile.bench]
debug = true
opt-level = 3

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[package.metadata.kani.flags]
default-unwind = "1"
